<?xml version="1.0"?>
<package format="2">
  <name>ranaa_pkg</name>
  <version>0.0.0</version>
  <description>The ranaa_pkg package</description>

  
  <maintainer email="rana@todo.todo">rana</maintainer>


 
  <license>TODO</license>


 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>math</build_depend>
  <build_depend>numpy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>math</build_export_depend>
  <build_export_depend>numpy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>numpy</exec_depend>



  
  <export>
    
  </export>
</package>
